# MemoryAIChat

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  packages.txt  pip.conf  pyproject.toml  requirements-dev.txt  requirements.txt  requirments.txt  requirmentsOld.txt  seed_data.json
.streamlit/: config.toml
memoryaiassistant_pkg/: MergedLogic.py  database.py  embedding_function.py  welcome.py
memoryaiassistant_pkg/pages/: memory_log.py  time_capsule.py
notebooks/: prompt-engineering.ipynb  prompt-engineeringv2.ipynb  prompt-engineeringv3.ipynb  testOutPut.txt  whisper (1).ipynb  whisper.ipynb
pages/: memory_log.py  time_capsule.py
