[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "memoryaiassistant"
version = "1.0.0"
description = "A chatbot app powered by OpenAI and Streamlit"
authors = ["Natalia Jordan <private>"]
include = [
  "memoryaiassistant_pkg/data/*"
]

[[tool.poetry.packages]]
include = "memoryaiassistant_pkg"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aioboto3 = "^12"
streamlit = "^1.0"
fsspec = "*"
openai = "^1.14"
pandas = "^2"
poetry = "^1.7"
pydantic = "^2"
s3fs = "*"
pydub = "^0.25.1"
Markdown = "^3.7"
cffi = "1.16.0"
wheel = "^0.37.1"
transformers = "^4.52.4"
chromadb = "^1.0.12"
torch = "^2.7.1"
audio-recorder-streamlit = "^0.0.10"
protobuf = "3.20.*"
azure-cognitiveservices-speech = "^1.20.0"
gtts = "^2.5.4"
pillow = "^11.2.1"
requests = "^2.32.4"
chromadbx = "^0.1.0"




[tool.poetry.group.dev.dependencies]
cfn_flip = "*"
cfn-lint = "*"
ipykernel = "*"
openpyxl = "*"
beautifulsoup4 = "*"
pyarrow = "*"